doctest 0.8.0+
==============



doctest 0.8.0 (2023-01-03)
==========================

  * Expected error messages can be optionally prefixed with "error: ".

  * Writing "??? " at the beginning of an error is now deprecated.

  * Texinfo users can markup errors with `@error{}`.

  * `doctest myclass` has been refactored with various bugs fixed.

  * Preliminary support for `doctest classdef.method` on Octave.

  * Test classdef methods using dotted `classdef.method` while still
    using `@class/method` on old-style classes.

  * Functions defined directly in the Octave interpreter can now be tested.

  * Test suite fixes for Octave 6 and 7.

  * Source code is encoded with UTF-8, indicated with `.oct-config` files.

  * Don't doctest some classdef methods twice.



doctest 0.7.0 (2019-03-23)
==========================

  * Functions within compiled `.oct` files can now be tested.

  * Tests are run with default number formatting (see `help doctest`).

  * More robust to errors during testing.

  * Makefile improvements and fixes.



doctest 0.6.1 (2018-01-04)
==========================

  * Workaround regex bug on ARM (again!).



doctest 0.6.0 (2017-12-25)
==========================

  * Tests can now call "clear" and "clear all".

  * Fixes for running on Octave development versions (upcoming 4.4.0).

  * Minimum supported Octave version is now 4.2.0.  The package no longer
    has any compiled code and does not include an "evalc" implementation.



doctest 0.5.0 (2016-11-13)
==========================

  * SKIP_IF and other conditional directives can include small single-line
    blocks of code.  For example:

      - "% doctest: +SKIP_IF(foo() && bar(42))"

  * Recursion into subdirectories is now the default; pass "-nonrecursive"
    for the previous default behaviour.

  * In Texinfo mode, skip tests without output by default.  This is an
    experimental change to help test the GNU Octave project; the feature