@@ -1,6 +1,8 @@
 doctest 0.8.0+
 ==============
 
+  * Developement repo moved to https://github.com/gnu-octave/octave-doctest
+
 
 
 doctest 0.8.0 (2023-01-03)
